--- a/src/fi/tnie/db/source/IMPLEMENTATION.in
+++ b/src/fi/tnie/db/source/IMPLEMENTATION.in
@@ -6,14 +6,10 @@ import java.util.Map;
 
 import fi.tnie.db.ent.EnumMetaData;
 import fi.tnie.db.ent.EntityFactory;
-// import fi.tnie.db.ent.value.IntegerKey;
-// import fi.tnie.db.ent.value.IntegerValue;
-import fi.tnie.db.ent.value.Key;
-// import fi.tnie.db.ent.value.VarcharKey;
-// import fi.tnie.db.ent.value.VarcharValue;
 import fi.tnie.db.meta.Column;
 import fi.tnie.db.meta.BaseTable;
 import fi.tnie.db.meta.ForeignKey;
+import fi.tnie.db.ent.value.*;
 {{imports}}
 
 
