Fix GWT compilation problems
- some of the classes intented to be transliterable are moved into ent -subpackage
- some new type parameters are introduced to make it all compilable by GWT-compiler

--- a/src/fi/tnie/db/source/INTERFACE.in
+++ b/src/fi/tnie/db/source/INTERFACE.in
@@ -122,7 +122,7 @@ public interface {{table-interface}}
 
 
 		public static class Query
-			extends fi.tnie.db.ent.DefaultEntityQuery<Attribute, Reference, Type, {{table-interface}}, MetaData> {
+			extends fi.tnie.db.ent.DefaultEntityQuery<Attribute, Reference, Type, {{table-interface}}, Factory, MetaData> {
 		
 			/**
 			 * 
