Add type parameters to ReferenceType

--- a/src/fi/tnie/db/source/HAS_KEY.in
+++ b/src/fi/tnie/db/source/HAS_KEY.in
@@ -11,7 +11,7 @@ import fi.tnie.db.types.ReferenceType;
 
 public interface {{has-key-interface}}<
 	R extends fi.tnie.db.ent.Reference,
-	T extends ReferenceType<T, S>,
+	T extends ReferenceType<?, R, T, E, ?, ?, S>,
 	E extends Entity<?, R, T, E, ?, ?, S>,
 	S extends EntityMetaData<?, R, T, E, ?, ?, S>	
 	>
