--- a/src/fi/tnie/db/source/INTERFACE.in
+++ b/src/fi/tnie/db/source/INTERFACE.in
@@ -1,6 +1,9 @@
 package {{package-name}};
 
+import fi.tnie.db.ent.CyclicTemplateException;
+import fi.tnie.db.ent.EntityRuntimeException;
 import fi.tnie.db.ent.DataObject;
+import fi.tnie.db.ent.DefaultQueryTemplate;
 import fi.tnie.db.ent.Entity;
 import fi.tnie.db.ent.EntityBuildContext;
 import fi.tnie.db.ent.EntityBuilder;
@@ -25,6 +28,11 @@ public interface {{table-interface}}
 		@Override
 		public MetaData getMetaData() {		
 			return {{table-interface}}Impl.{{table-interface}}MetaData.getInstance();
+		}
+		
+		@Override
+		public Type self() {
+			return this;
 		}
 	}
 	
@@ -73,7 +81,37 @@ public interface {{table-interface}}
 	
 	interface Builder extends EntityBuilder<{{table-interface}}> {
 		{{table-interface}} read(DataObject src);	
-	}	
+	}
+	
+	public class QueryTemplate
+		extends DefaultQueryTemplate<Attribute, Reference, Type, {{table-interface}}, Holder, Factory, MetaData, QueryTemplate>
+	{
+		/**
+		 * 
+		 */
+		private static final long serialVersionUID = 1L;
+
+		@Override
+		public MetaData getMetaData() {
+			return {{table-interface}}Impl.{{table-interface}}MetaData.getInstance();
+		}
+
+		@Override
+		public QueryTemplate self() {
+			return this;
+		}		
+
+		@Override
+		public {{table-interface}}.Query newQuery() {			
+			try {
+				return new {{table-interface}}.Query(self());
+			}
+			catch (CyclicTemplateException e) {
+				throw new EntityRuntimeException(e.getMessage(), e); 
+			}
+			
+		}
+	}
 		
 		
 	public static abstract class Key<
@@ -122,19 +160,23 @@ public interface {{table-interface}}
 
 
 		public static class Query
-			extends fi.tnie.db.ent.DefaultEntityQuery<Attribute, Reference, Type, {{table-interface}}, Factory, MetaData> {
+			extends fi.tnie.db.ent.DefaultEntityTemplateQuery<
+				Attribute, Reference, Type, {{table-interface}}, Holder, Factory, MetaData, QueryTemplate> {
 		
 			/**
 			 * 
 			 */
 			private static final long serialVersionUID = 1L;
 		
-			public Query({{table-interface}} root) throws fi.tnie.db.ent.CyclicTemplateException {
-				super(root);
+			/**
+			 * No-argument constructor for GWT Serialization
+			 */			
+			@SuppressWarnings("unused")
+			private Query() {				
 			}
-		
-			public Query(MetaData meta) {
-				super(meta);
+					
+			public Query(QueryTemplate root) throws fi.tnie.db.ent.CyclicTemplateException {
+				super(root);
 			}
 		}
     
