--- a/src/fi/tnie/db/source/INTERFACE.in
+++ b/src/fi/tnie/db/source/INTERFACE.in
@@ -104,26 +104,16 @@ public interface {{table-interface}}
 			return this;
 		}		
 		
-		public {{table-interface}}.Query newQuery(long limit, long offset) {
-			return newQuery(Long.valueOf(limit), Long.valueOf(offset));
-		}
-		
 
 		@Override
-		public {{table-interface}}.Query newQuery(Long limit, Long offset) {			
+		public {{table-interface}}.Query newQuery() {			
 			try {
-				return new {{table-interface}}.Query(self(), limit, offset);
+				return new {{table-interface}}.Query(self());
 			}
 			catch (CyclicTemplateException e) {
 				throw new EntityRuntimeException(e.getMessage(), e); 
 			}
-		}
-				
-		@Override
-		public {{table-interface}}.Query newQuery()
-				throws CyclicTemplateException {
-			return newQuery(null, null);
-		}
+		}				
 	}
 		
 		
@@ -194,9 +184,9 @@ public interface {{table-interface}}
 			private Query() {				
 			}
 					
-			public Query(QueryTemplate root, Long limit, Long offset) 
+			public Query(QueryTemplate root) 
 				throws fi.tnie.db.ent.CyclicTemplateException {
-				super(root, limit, offset);
+				super(root);
 			}
 		}
     
