--- a/src/fi/tnie/db/source/BUILDER_LINKER_INIT.in
+++ b/src/fi/tnie/db/source/BUILDER_LINKER_INIT.in
@@ -1,6 +1,6 @@
 
 {	
-	final {{referenced-table-interface-qualified}}.Key<Reference, Type, {{table-interface}}, {{table-interface}}.MetaData> pk = {{reference-key-variable}};					
+	final {{referenced-table-interface-qualified}}.Key<Attribute, Reference, Type, {{table-interface}}, {{table-interface}}.Holder, {{table-interface}}.Factory, {{table-interface}}.MetaData> pk = {{reference-key-variable}};					
 	fi.tnie.db.meta.ForeignKey fk = m.getForeignKey(pk.name());				
 	fi.tnie.db.expr.TableReference tref = ctx.getQuery().getReferenced(tableRef, fk);
 
