Entity.Reference: do not pass type as constructor parameter
If we would pass a type, there would be occur circular-dependency
when instantiating meta-data object for tables contain a self-reference.

At same time, we can get rid of the member variable.

--- a/src/fi/tnie/db/source/reference-type.in
+++ b/src/fi/tnie/db/source/reference-type.in
@@ -3,15 +3,12 @@ enum {{reference-type}} implements fi.tnie.db.ent.Reference {
     {{reference-constants}}
     ;
     
-    private String identifier;
-    private ReferenceType<?, ?, ?, ?, ?, ?, ?> type;
+    private String identifier;    
         
-    {{reference-type}}(ReferenceType<?, ?, ?, ?, ?, ?, ?> type) {    
-    	this.type = type;
+    {{reference-type}}() {    
     }
     
-    {{reference-type}}(String identifier, ReferenceType<?, ?, ?, ?, ?, ?, ?> type) {
-    	this(type);
+    {{reference-type}}(String identifier) {    	
         this.identifier = identifier;
     }    
     
@@ -19,9 +16,9 @@ enum {{reference-type}} implements fi.tnie.db.ent.Reference {
     public String identifier() {
         return (identifier == null) ? name() : identifier;
     }
-
+    
     public ReferenceType<?, ?, ?, ?, ?, ?, ?> type() {
-    	return this.type;
-    }    
+    	return null;
+    }
 }    
     
