--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,6 +1,8 @@
 
 
-log4j.logger.fi.tnie=DEBUG, aa
+log4j.rootLogger=DEBUG, aa
+# log4j.logger.fi.tnie=DEBUG, aa
+
 
 log4j.appender.aa=org.apache.log4j.ConsoleAppender
 
